# StreamCounter

./: .gitignore
FishCounter/: FishCounter.sln  FishCounter.vcxproj  main.cpp
FishCounter/FishCounter/x64/Debug/: FishCounter.exe.recipe  FishCounter.ilk  vc143.idb
StreamCounter1/: CMakeLists.txt  Code.ipynb
StreamCounter1/runs/detect/predict3/labels/: image_rotated.txt
StreamCounter1/runs/detect/predict4/labels/: Video_1.txt  Video_100.txt  Video_103.txt  Video_104.txt  Video_105.txt  Video_106.txt  Video_108.txt  Video_109.txt  Video_110.txt  Video_111.txt  Video_115.txt  Video_119.txt  Video_120.txt  Video_122.txt  Video_123.txt  Video_125.txt  Video_127.txt  Video_129.txt  Video_130.txt  Video_132.txt  Video_133.txt  Video_135.txt  Video_136.txt  Video_137.txt  Video_138.txt  Video_141.txt  Video_142.txt  Video_144.txt  Video_145.txt  Video_146.txt  Video_15.txt  Video_152.txt  Video_154.txt  Video_156.txt  Video_16.txt  Video_160.txt  Video_162.txt  Video_164.txt  Video_165.txt  Video_166.txt  (+126 more)
StreamCounter1/src/: usb_enum.cpp
runs/detect/predict4/labels/: Video_10.txt  Video_101.txt  Video_102.txt  Video_107.txt  Video_11.txt  Video_112.txt  Video_113.txt  Video_114.txt  Video_116.txt  Video_117.txt  Video_118.txt  Video_12.txt  Video_121.txt  Video_124.txt  Video_126.txt  Video_128.txt  Video_13.txt  Video_131.txt  Video_134.txt  Video_139.txt  Video_14.txt  Video_140.txt  Video_143.txt  Video_147.txt  Video_148.txt  Video_149.txt  Video_150.txt  Video_151.txt  Video_153.txt  Video_155.txt  Video_157.txt  Video_158.txt  (+103 more)
src/: camera_capture.cpp
(+9 files in other folders)
